# dvorak9-scorer

./: .gitignore  README.md  dvorak9_combination_speed_weights.py  dvorak9_scorer.py  generate_combinations_weights_from_comfort.py  generate_combinations_weights_from_comfort_24keys.py  generate_combinations_weights_from_speed.py  generate_dvorak9_weights_based_on_typing_speed.py  pyproject.toml  test_dvorak10.py  test_dvorak9_all_bigrams.py  test_dvorak9_speed.py  validate_dvorak9_all_bigrams.py
input/: estimated_bigram_scores_24keys.csv
output/: dvorak9_combination_speed_results.txt  dvorak9_combinations_fdr_results.csv
output/scores_for_all_bigrams/: cli_test_dvorak9_all_bigrams.py.txt  dvorak9_scores_all_bigrams.csv  dvorak9_scores_unique_all_bigrams.csv
output/speed_analysis/: dvorak_combinations_fdr_results.csv  dvorak_combinations_significant_fdr.csv  test_dvorak9_speed_results.txt
weights/: combinations_weights_from_comfort_significant.csv  combinations_weights_from_speed_significant.csv  dvorak9_weights.csv  dvorak9_weights_speed.csv
